# libogc

./: .clang-format  .cvsignore  .doozer.json  .gitignore  CMakeLists.txt  CNAME  Catnip.cmake  Doxyfile  LICENSE  Makefile  PKGBUILD  README.md  annotated.html  api_doc.html  aram_8h.html  arqmgr_8h.html  asndlib_8h.html  audio_8h.html  bug.html  cache_8h.html  card_8h.html  check-format  classes.html  cond_8h.html  consol_8h.html  deprecated.html  dir_0d653af529ccb60d59d9e4c4f945aef6.html  dir_3f99a9bc569bbfd19484ce6f0200cc9f.html  dsp_8h.html  dvd_8h.html  exi_8h.html  files.html  functions.html  functions_vars.html  gcbogc.ld  gccore_8h.html  gcsdk.dsp  gcsdk.dsw  gcsdk.vcproj  gctypes_8h.html  (+202 more)
.github/workflows/: ci.yml  doxygen.yaml
gc/: aesndlib.h  asndlib.h  debug.h  ftp.h  gcbool.h  gccore.h  gcmodplay.h  gctypes.h  gcutil.h  iso9660.h  mad.h  madplayer.h  mp3player.h  network.h  ogcsys.h  samplerate.h  sdcard.h  smb.h  zconf.h
gc/bte/: bd_addr.h  bte.h
gc/di/: di.h
gc/lwbt/: bd_addr.h  bte.h
gc/lwip/: api.h  api_msg.h  lwipopts.h  memp.h  tcp.h
gc/mad/: bit.h  decoder.h  fixed.h  frame.h  global.h  huffman.h  layer12.h  layer3.h  mad.h  stream.h  synth.h  timer.h  version.h
gc/modplay/: bpmtab.h  defines.h  freqtab.h  inctab.h  mixer.h  modplay.h  semitonetab.h
gc/ogc/: aes.h  aram.h  arqmgr.h  arqueue.h  audio.h  cache.h  card.h  cast.h  color.h  cond.h  conf.h  consol.h  console.h  context.h  disc_io.h  dsp.h  dvd.h  es.h  exception.h  exi.h  gu.h  gx.h  gx_struct.h  if_config.h  ios.h  ipc.h  irq.h  isfs.h  iusb.h  libversion.h  (+37 more)
libaesnd/: CMakeLists.txt  aesndlib.c  dspmixer.h
libasnd/: CMakeLists.txt  asndlib.c  dsp_mixer.h
libdb/: CMakeLists.txt  bba_dbg.c  bba_dbg.h  debug.c  debug_handler.S  debug_if.h  debug_supp.c  debug_supp.h  geckousb.c  tcpip.c  tcpip.h  usb.c  usb.h
libdb/uIP/: bba.c  bba.h  memb.c  memb.h  memr.c  memr.h  tcpip.c  tcpip.h  uip.c  uip.h  uip_arch.c  uip_arch.h  uip_arp.c  uip_arp.h  uip_icmp.c  uip_icmp.h  uip_ip.c  uip_ip.h  uip_netif.c  uip_netif.h  uip_pbuf.c  uip_pbuf.h  uip_tcp.c  uip_tcp.h  uipopt.h
libdi/: CMakeLists.txt  README  di.c  di_read.c  stubasm.S  stubasm.h  stubload.c
libiso9660/: CMakeLists.txt  iso9660.c
libmad/: CMakeLists.txt  bit.c  bit.h  config.h  decoder.c  decoder.h  fixed.c  fixed.h  frame.c  frame.h  huffman.c  layer12.c  layer3.c  madplayer.c  mp3player.c  stream.c  synth.c  timer.c  version.c  version.h
libmodplay/: CMakeLists.txt  bpmtab32.c  bpmtab48.c  freqtab.c  gcmodplay.c  inctab32.c  inctab48.c  mixer.c  modplay.c  semitonetab.c
libogc/: CMakeLists.txt  aes.c  aram.c  arqmgr.c  arqueue.c  audio.c  cache.c  cache_asm.S  card.c  cond.c  conf.c  console.c  console.h  console_font_8x16.c  console_internal.h  decrementer.c  decrementer_handler.S  default_panic.c  depackrnc.S  depackrnc1.c  dsp.c  dvd.c  es.c  exception.c  exception_handler.S  exi.c  exi_asm.S  gcn_crt0.S  gcsd.c  gu.c  gu_ps_concat44.S  gu_psasm.S  gx.c  gx_regdef.h  ios.c  ipc.c  irq.c  irq_handler.S  isfs.c  iusb.c  (+65 more)
libogc/lwpcompat/: lwpc_alarm.c  lwpc_common.h  lwpc_mq.c  lwpc_queue.c  lwpc_sem.c  lwpc_sync.c  lwpc_thread.c
libogc/ogc_sockets/: soc.h  soc_accept.c  soc_bind.c  soc_common.c  soc_common.h  soc_connect.c  soc_fcntl.c  soc_gai_strerror.c  soc_gethostbyname.c  soc_getsockname.c  soc_getsockopt.c  soc_inet_pton.c  soc_init.c  soc_listen.c  soc_poll.c  soc_recv.c  soc_send.c  soc_setsockopt.c  soc_shutdown.c  soc_socket.c  soc_util.c
libogcsys/: close.c  console.c  console.h  console_font.c  console_font_8x8.c  dvd_supp.c  dvd_supp.h  flock_supp.c  fstat.c  getpid.c  iosupp.c  iosupp.h  isatty.c  kill.c  lock_supp.c  lseek.c  malloc_lock.c  netio_fake.c  netio_fake.h  newlibc.c  open.c  read.c  sbrk.c  sdcardio_fake.c  sdcardio_fake.h  sleep.c  stdin_fake.c  stdin_fake.h  timesupp.c  timesupp.h  usleep.c  write.c
libsamplerate/: common.h  float_cast.h
libsdcard/: card_buf.c  card_fat.c  card_io.c  card_uni.c  fat.c  fat_buf.c  fat_ops.c  sdcard.c  sdcardio.c
libtinyftp/: ftp_devoptab.c
libtinysmb/: CMakeLists.txt  des.c  lmhash.c  nbt.c  ntlm.c  smb.c  smb_devoptab.c
libwiikeyboard/: CMakeLists.txt  keyboard.c  usbkeyboard.c  wskbdutil.c
libz/: adler32.c  compress.c  crc32.c  deflate.c  gzio.c  trees.c  uncompr.c  zutil.c
lockstubs/: flock_supp_stub.c  lock_supp_stub.c  malloc_lock_stub.c
lwbt/: CMakeLists.txt  btarch.h  bte.c  btmemb.c  btmemr.c  btmemr.h  btopt.h  btpbuf.c  btpbuf.h  hci.c  hci.h  l2cap.c  l2cap.h  physbusif.c  physbusif.h
lwip/: CMakeLists.txt  netio.c  network.c
lwip/arch/gc/: lib_arch.c
lwip/arch/gc/netif/: gcif.c
lwip/core/: mem.c  memp.c  pbuf.c  sys.c  tcp.c  tcp_in.c  tcp_out.c
lwip/core/ipv4/: icmp.c  ip.c
lwip/netif/: loopif.c
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  functions_0.js  (+56 more)
sublime/: libogc-selffork.sublime-project
tuxedo/: CMakeLists.txt  cache.c  common_crt0.S  default_stacks.c  early_init.S  exception.c  exception_asm.S  interrupt.c  interrupt_asm.S  mailbox.c  newlib_syscalls.c  ogc.specs  rvl.specs  sync.c  thread.c  thread_priv.h  tick.c
wiiuse/: CMakeLists.txt  classic.c  definitions.h  dynamics.c  dynamics.h  events.c  guitar_hero_3.c  guitar_hero_3.h  io.c  io.h  io_wii.c  ir.c  ir.h  motion_plus.c  motion_plus.h  nunchuk.c  os.h  speaker.c  wiiboard.c  wiiuse.c  wiiuse.h  wiiuse_internal.h  wpad.c
wpad2/: CMakeLists.txt  classic.c  classic.h  device.c  device.h  dynamics.c  dynamics.h  event.c  event.h  guitar_hero_3.c  guitar_hero_3.h  internals.h  ir.c  ir.h  motion_plus.c  motion_plus.h  nunchuk.c  nunchuk.h  speaker.c  speaker.h  wii_board.c  wii_board.h  wiiuse_internal.h  worker.c  worker.h  wpad.c
(+51 files in other folders)
